desktop view added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>76</h1>
     <p>of 100</p>
     </div>
-    <h4>Great</h4>
+    <h4 class="great">Great</h4>
     <p class="text">You scorer higher than 65% of the people who have taken these tests.</p>
     
   </div>
